# mkproj

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: commandline.rs  config.rs  lib.rs  main.rs  template.rs
tests/: cli.rs
